cmake_minimum_required(VERSION 3.24)
project(3 C)

set(CMAKE_C_STANDARD 11)

add_executable(prva 1.c)
add_executable(vtora 2.c)
add_executable(treta 3.c)
add_executable(cetvrta 4.c)
add_executable(petta 5.c)
add_executable(sesta 6.c)
add_executable(sedma 7.c)
add_executable(osma 8.c)
add_executable(devetta 9.c)
add_executable(desetta 10.c)
add_executable(edinaesetta 11.c)
add_executable(dvanaesetta 12.c)

